--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,8 +17,9 @@ tauri-build = { version = "1.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["shell-open"] }
-tokio = {version = "1.24.2", features = ["full"] }
+tokio = { version = "1.24.2", features = ["full"] }
 websocket = "0.26.5"
+anyhow = "1.0.68"
 
 [features]
 # by default Tauri runs in production mode
